objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Manf_Year__c</fullName>
        <label>Manf. Year</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Accessories__c</fullName>
        <label>Total Accessories</label>
        <summaryForeignKey>Accessories__c.Product__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Price_Accessories__c</fullName>
        <label>Total Price Accessories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>